@@ -42,6 +42,7 @@ export JAVA_PATH=$java_path
 export SPARK_HOME="/spark-3.3.2-bin-hadoop3"
 export PATH=$SPARK_HOME/bin:$PATH
 export JAVA_TOOL_OPTIONS="-Djdk.attach.allowAttachSelf=true"
+export JDK_JAVA_OPTIONS="-Djdk.attach.allowAttachSelf=true"
 
 echo "Start tests"
 export CLICKHOUSE_TESTS_SERVER_BIN_PATH=/clickhouse
